Remove bg-background from all pages to display hexagonal background uniformly

--- a/src/index.css
+++ b/src/index.css
@@ -142,13 +142,14 @@ defined here. Components use semantic tokens.
   }
 
   body {
-    @apply bg-background text-foreground font-body antialiased;
+    @apply text-foreground font-body antialiased;
     font-feature-settings: "kern" 1, "liga" 1;
     background-image: url('/bg-hexagonal.png');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-color: hsl(var(--background));
   }
   
   h1, h2, h3, h4, h5, h6 {
